# Object-Detection-YOLOv8-using-CUDA

./: README.md
YOLOv8-CUDA-CPP/: CMakeLists.txt
YOLOv8-CUDA-CPP/src/: main.cpp
